--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ OPENAI_API_KEY = ""
 OPENAI_BASE_URL= "https://api.openai.com/v1"
 
 OPENROUTER_BASE_URL = "https://openrouter.ai/api/v1"
-OPENROUTER_API_KEY = ""
+#OPENROUTER_API_KEY = ""
 
 OLLAMA_BASE_URL = "http://localhost:11434/v1"  # localhost (ollama local)
 
