--- a/.env
+++ b/.env
@@ -5,32 +5,24 @@ PIPE_PATH = "logs/pipes/"
 
 # ====================================================
 
-# AI
+# LLM SERVICE SETTINGS
 OPENAI_API_KEY = ""
 OPENAI_BASE_URL= "https://api.openai.com/v1"
 
 OPENROUTER_BASE_URL = "https://openrouter.ai/api/v1"
-#OPENROUTER_API_KEY = ""
+OPENROUTER_API_KEY = ""
 
-OLLAMA_BASE_URL = "http://localhost:11434/v1"  # localhost (ollama local)
+#OLLAMA_BASE_URL = "http://localhost:11434/v1"  # localhost (ollama local)
 
-OPENWEBUI_BASE_URL = "http://83.97.79.137:2004/api"
-OPENWEBUI_API_KEY = ""
-
-# FINAL MODELS
+# CURRENT SERVICES
 EMBEDDINGS_SERVICE = "ollama-embeddings"
 EMBEDDINGS_MODEL = "all-minilm"
 
-#PDF_SERVICE = "openai"
-#PDF_MODEL = "gpt-4.1"
 PDF_SERVICE = "openrouter"
 PDF_MODEL = "google/gemini-2.5-flash-preview-05-20"
-#PDF_SERVICE = "openrouter"
-#PDF_MODEL = "openai/gpt-4.1"
 
 TEXT_SERVICE = "openrouter"
 TEXT_MODEL = "google/gemma-3-27b-it"
-#TEXT_MODEL = "gemma3:27b"
 
 # ====================================================
 
@@ -40,7 +32,7 @@ BRAVE_SEARCH_API_KEY = ""
 # ====================================================
 
 # DATABASE
-MONGODB_BASE_URL = "mongodb://localhost:27017"
+#MONGODB_BASE_URL = "mongodb://root:1234@mongo:27017"
 
 # ====================================================
 
