Finalizado soporte con Docker

--- a/.env
+++ b/.env
@@ -6,20 +6,35 @@ PIPE_PATH = "logs/pipes/"
 # ====================================================
 
 # LLM SERVICE SETTINGS
-OPENAI_API_KEY = ""
-OPENAI_BASE_URL= "https://api.openai.com/v1"
 
-OPENROUTER_BASE_URL = "https://openrouter.ai/api/v1"
+#OPENAI_API_KEY = ""
+#OPENAI_BASE_URL= "https://api.openai.com/v1"
+
 OPENROUTER_API_KEY = ""
+OPENROUTER_BASE_URL = "https://openrouter.ai/api/v1"
 
-#OLLAMA_BASE_URL = "http://localhost:11434/v1"  # localhost (ollama local)
+OLLAMA_BASE_URL = "http://ollama:11434/v1"
+
+CUSTOM_API_KEY = ""
+CUSTOM_BASE_URL = "https://generativelanguage.googleapis.com/v1beta/openai/"
+
+# --------------------------------------------------
 
 # CURRENT SERVICES
+
+# Can be:
+# - ollama            (for llms)
+# - ollama-embeddings (for embedding models)
+# - openrouter
+# - openai
+# - custom            (openai-compatible endpoints)
+# - custom-google     (google-compatible endpoints)
+
 EMBEDDINGS_SERVICE = "ollama-embeddings"
 EMBEDDINGS_MODEL = "all-minilm"
 
-PDF_SERVICE = "openrouter"
-PDF_MODEL = "google/gemini-2.5-flash-preview-05-20"
+PDF_SERVICE = "custom-google"
+PDF_MODEL = "models/gemini-2.5-flash-preview-05-20"
 
 TEXT_SERVICE = "openrouter"
 TEXT_MODEL = "google/gemma-3-27b-it"
@@ -32,11 +47,12 @@ BRAVE_SEARCH_API_KEY = ""
 # ====================================================
 
 # DATABASE
-#MONGODB_BASE_URL = "mongodb://root:1234@mongo:27017"
+#MONGODB_URI = "mongodb://root:1234@mongo:27017"
 
 # ====================================================
 
 # OTHER SERVICES
 VIRUSTOTAL_API_KEY = ""
+VIRUSTOTAL_API_URL = "https://www.virustotal.com/api/v3/domains/"
 
 # ====================================================
