--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.12-slim AS backend
 USER root
 
-WORKDIR /backend
+WORKDIR /app
 
 COPY ./backend ./backend/
 COPY ./libreria ./libreria/
@@ -10,6 +10,7 @@ COPY .env .
 COPY ./requirements.txt .
 
 RUN pip install -r requirements.txt
+RUN pip install google-genai==1.21.1
 
 RUN apt update -y
 RUN apt install -y ffmpeg
@@ -20,4 +21,4 @@ RUN pip install -e libreria/fake_news_detector
 
 EXPOSE 8000
 
-CMD ["python3", "/backend/backend.py"]
+CMD ["python3", "/app/backend/backend.py"]
